[gd_scene load_steps=5 format=2]

[ext_resource path="res://CursorRay.gd" type="Script" id=1]
[ext_resource path="res://CameraOrbit.gd" type="Script" id=2]
[ext_resource path="res://crosshair.tscn" type="PackedScene" id=4]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.25, 0.25, 0.25 )

[node name="CameraOrbit" type="Spatial"]
script = ExtResource( 2 )

[node name="CameraSpace" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, -7 )

[node name="CameraBody" type="KinematicBody" parent="CameraSpace"]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )

[node name="Camera" type="Camera" parent="CameraSpace/CameraBody"]

[node name="CursorRay" type="RayCast" parent="CameraSpace/CameraBody/Camera"]
enabled = true
cast_to = Vector3( 0, 0, -100 )
collide_with_areas = true
debug_shape_custom_color = Color( 0.937255, 0.0313726, 0.796078, 1 )
debug_shape_thickness = 5.0
script = ExtResource( 1 )

[node name="CrosshairControl" parent="CameraSpace/CameraBody/Camera" instance=ExtResource( 4 )]

[node name="CollisionShape" type="CollisionShape" parent="CameraSpace/CameraBody"]
shape = SubResource( 1 )
disabled = true
